@@ -22,10 +22,11 @@
 
 #include "../config.h"
 
+            TOP = ..
             BIN = .
           UTILS = $(TOP)/utils
     READLINELIB = -lreadline
-EXTRA_LIBRARIES = -lutil
+EXTRA_LIBRARIES =
 
 #ifdef HAVE_XSHM
 # define XSHM_DEF -DHAVE_XSHM
@@ -36,19 +37,15 @@ EXTRA_LIBRARIES = -lutil
 #ifdef HAVE_READLINE
 # define READLINE_DEF -DHAVE_READLINE
        DEPLIBS1 = $(DEPLIBS) $(READLINELIB)
-        X48LIBS = $(XLIB) $(READLINELIB)
+        X48LIBS = $(XLIB) $(READLINELIB) $(EXTRA_LIBRARIES)
 #else
 # define READLINE_DEF
        DEPLIBS1 = $(DEPLIBS)
-        X48LIBS = $(XLIB)
+        X48LIBS = $(XLIB) $(EXTRA_LIBRARIES)
 #endif
 
 #ifndef UNIX_DEF
 # define UNIX_DEF
-#endif
-
-#ifdef CC_DEF
-             CC = CC_DEF
 #endif
 
 #ifdef CDEBUGFLAGS_DEF
@@ -67,7 +64,7 @@ EXTRA_LIBRARIES = -lutil
           TARS1 = actions.c debugger.c device.c disasm.c emulate.c \
                   errors.c init.c lcd.c main.c memory.c options.c \
                   register.c resources.c romio.c rpl.c serial.c timer.c \
-                  x48_x11.c 
+                  x48_x11.c
           SRCS1 = actions.c debugger.c device.c disasm.c emulate.c \
                   errors.c init.c lcd.c main.c memory.c options.c \
                   register.c resources.c romio.c rpl.c serial.c timer.c \
@@ -82,7 +79,10 @@ EXTRA_LIBRARIES = -lutil
           OBJS3 = checkrom.o romio.o
           SRCS4 = mkcard.c
           OBJS4 = mkcard.o
-             CO = co -l
+           SRSS = $(SRCS1) $(SRCS2) $(SRCS3) $(SRCS4)
+           OBJS = $(OBJS1) $(OBJS2) $(OBJS3) $(OBJS4)
+       PROGRAMS = ProgramTargetName(xterm) ProgramTargetName(dump2rom) \
+                  ProgramTargetName(checkrom) ProgramTargetName(mkcard)
        TARFILES = Imakefile X48.ad $(TARS1) $(SRCS2) $(SRCS3) $(SRCS4) $(HDRS)
 
 all:: $(BIN)/x48 $(BIN)/dump2rom $(BIN)/checkrom $(BIN)/mkcard
@@ -105,6 +105,8 @@ InstallProgram(checkrom,$(BINDIR))
 InstallProgram(mkcard,$(BINDIR))
 
 InstallAppDefaults(X48)
+
+DependTarget()
 
 x48_x11.o: X48.ad.h
 
